# development-for-solana

./: .gitignore  Anchor.toml  INSTALL.md  README.md  package-lock.json  package.json  tsconfig.json
migrations/: deploy.ts
programs/01-donor-vault/: Cargo.toml  TASK.md
programs/01-donor-vault/src/: constants.rs  error.rs  lib.rs
programs/01-donor-vault/src/instructions/: donate.rs  mod.rs  tier_of.rs
programs/01-donor-vault/src/state/: donation.rs  donor_record.rs  mod.rs  tier.rs
programs/01-token/: Cargo.toml  TASK.md
programs/01-token/src/: lib.rs
programs/02-price-voting/: Cargo.toml  TASK.md
programs/02-price-voting/src/: lib.rs
programs/02-staking/: Cargo.toml  TASK.md
programs/02-staking/src/: constants.rs  error.rs  lib.rs
programs/02-staking/src/instructions/: claim.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
programs/03-price-voting-withdrawal/: Cargo.toml  TASK.md
programs/03-price-voting-withdrawal/src/: lib.rs
programs/04-amm-pair/: Cargo.toml  TASK.md
programs/04-amm-pair/src/: lib.rs
programs/05-merkle-airdrop/: Cargo.toml  TASK.md
programs/05-merkle-airdrop/src/: lib.rs
programs/05-raffle/: Cargo.toml  TASK.md
programs/05-raffle/src/: error.rs  lib.rs
programs/06-raffle/: Cargo.toml  TASK.md
programs/06-raffle/src/: lib.rs
tests/: 01-donor-vault.test.ts  01-token.test.ts
tests/02-staking/: fixture.ts  init-vrddk.ts  staking.test.ts
tests/04-merkle-airdrop/: merkle-airdrop.test.ts  signatures.ts
tests/05-raffle/: fixture.ts  raffle.test.ts
tests/helpers/: bankrun.ts  index.ts  token.ts
(+15 files in other folders)
