[package]
name = "donor_vault"
version = "0.1.0"
description = "Donor Tiers Vault — tiered donation tracker (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "donor_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
